04/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-keys-json-service
  namespace: fhir-bootcamp
spec:
  selector:
    app: nginx-keys-json
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
